--- a/src/styles/5 - components/admin/_grid.scss
+++ b/src/styles/5 - components/admin/_grid.scss
@@ -26,7 +26,7 @@
 
 .product-admin-filter {
   position: relative;
-  z-index: map-get($z-index, 'filter');
+  z-index: map-get($z-index, "filter");
   margin-right: $s-size;
 }
 
@@ -41,7 +41,7 @@
   top: 0;
   right: 100%;
   background: $white;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   display: none;
 }
 
@@ -50,5 +50,5 @@
 }
 
 .product-form-container {
-  padding: $l-size;
+  padding: 1rem $l-size $l-size $l-size;
 }
