--- a/src/styles/4 - elements/_base.scss
+++ b/src/styles/4 - elements/_base.scss
@@ -1,4 +1,4 @@
-// 
+//
 // BASE STYLING ---------
 //
 * {
@@ -11,7 +11,7 @@ html {
 
 body {
   min-height: 100vh;
-  font-family: 'Tajawal', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: $baseFontSize;
   background: $background-color;
   font-weight: bold;
@@ -24,7 +24,7 @@ button:hover {
 
 button:focus {
   outline: none;
-}   
+}
 
 p {
   color: $paragraph-color;
@@ -32,7 +32,7 @@ p {
   line-height: $line-height;
 }
 
-strong { 
+strong {
   font-weight: bold;
 }
 
@@ -44,22 +44,22 @@ span {
 
 h1,
 h2,
-h3, 
-h4, 
+h3,
+h4,
 h5,
 h6 {
-  font-family: 'Tajawal', Helvetica, Arial, sans-serif;
+  font-family: "Tajawal", Helvetica, Arial, sans-serif;
   color: $heading-color;
 }
 
 // body::-webkit-scrollbar {
 //   width: 8px;
 // }
- 
+
 // body::-webkit-scrollbar-track {
 //   -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
 // }
- 
+
 // body::-webkit-scrollbar-thumb {
 //   background-color: $heading-color;
 //   outline: 1px solid lighten($heading-color, 10%);
@@ -75,7 +75,7 @@ h6 {
   position: relative;
   padding: $top $pad-desktop;
   display: flex;
-  animation: fadeIn .5s ease;
+  animation: fadeIn 0.5s ease;
 
   @media (max-width: $mobile) {
     padding: 5rem $m-size;
@@ -89,8 +89,7 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  position: relative;
-  padding-top: $xxl-size;
+  padding-top: 6rem;
   overflow: hidden;
   display: flex;
 }
@@ -100,6 +99,6 @@ h6 {
   flex-grow: 1;
   padding: $m-size 0;
   padding-top: 0;
-  animation: fadeIn .5s ease;
+  animation: fadeIn 0.5s ease;
   position: relative;
 }
