--- a/src/styles/5 - components/_basket.scss
+++ b/src/styles/5 - components/_basket.scss
@@ -6,9 +6,9 @@
   top: 0;
   right: 0;
   transform: translateX(100%);
-  box-shadow: 0 10px 15px rgba(0, 0, 0, .08);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.08);
   @include bezier-transition(transform);
-  z-index: map-get($z-index, 'basket');
+  z-index: map-get($z-index, "basket");
 
   @include mobile {
     width: 100%;
@@ -36,7 +36,7 @@
   border: 1px solid $border-color;
   margin-bottom: $s-size;
   @include bezier-transition();
-  animation: slide-up .5s ease;
+  animation: slide-up 0.5s ease;
 }
 
 .basket-item-wrapper {
@@ -46,12 +46,12 @@
   padding: 0 $s-size;
 
   display: grid;
-  grid-template-columns: 100px 1fr 80px 40px;
+  grid-template-columns: 100px 1fr 1fr 40px;
 }
 
 .basket-item-specs {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
 
   .spec-title {
     color: #8d8d8d;
@@ -78,9 +78,8 @@
   position: sticky;
   top: -20px;
   background: $white;
-  z-index: map-get($z-index, 'basket');
+  z-index: map-get($z-index, "basket");
 }
-
 
 .basket-header-title {
   flex-grow: 1;
@@ -112,7 +111,7 @@
   width: 142px;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
   position: relative;
 }
 
@@ -136,12 +135,12 @@
   width: 100%;
 
   &:before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     margin: auto;
     width: 93%;
-    height: .5px;
+    height: 0.5px;
     background: $border-color;
   }
 }
